Update pom.xml - more --add-opens